delete quiz and chapter name on quiz dashboard

--- a/templates/edit_quiz.html
+++ b/templates/edit_quiz.html
@@ -59,6 +59,7 @@
                     </div>
                     <div class="mb-3">
                         <button type="submit" class="btn btn-primary">Submit</button>
+                        <a href="/delete_quiz/{{quiz.id}}/{{name}}"  type="button" class="btn btn-danger">Delete</a>
                         <a href="/quiz_dashboard/{{name}}" type="button" class="btn btn-success"> cancel</a>
                         {{msg}}
                     </div>
