--- a/templates/quiz_dashboard.html
+++ b/templates/quiz_dashboard.html
@@ -48,7 +48,7 @@
                   <div class="col" style="margin-top: 20px;">
                     <div id="shadow" class="card" style="width: 500px;">
                         <div class="card-body" >
-                          <h5 id="center" class="card-title">Quiz {{quiz.id}}</h5>
+                          <h5 id="center" class="card-title">Quiz {{quiz.id}}| <small style="color: rgb(28, 2, 255);">  {{ quiz.chapter_name }}</small></h5>
                           {%if quiz.questions%}
                           <table class="table">
                             <thead>
