--- a/templates/quiz_dashboard.html
+++ b/templates/quiz_dashboard.html
@@ -49,7 +49,7 @@
                     <div id="shadow" class="card" style="width: 500px;">
                         <div class="card-body" >
                           <h5 id="center" class="card-title">Quiz {{quiz.id}}| <small style="color: rgb(28, 2, 255);">  {{ quiz.chapter_name }}</small></h5>
-                          {%if quiz.questions%}
+                          {%if quiz.questions %}
                           <table class="table">
                             <thead>
                               <tr class="table-dark">
@@ -62,8 +62,8 @@
                               {%for question in quiz.questions%}
                               <tr>
                                 <td>{{question.id}}</td>
-                                <td>{{question.question_statement}}</td>
-                                <td><a href="" type="button" class="btn btn-primary" >Edit</a> | <a href="#" type="button" class="btn btn-danger">delete</a></td>
+                                <td>{{question.question_title}}</td>
+                                <td><a href="/edit_question/{{question.id}}/{{name}}" type="button" class="btn btn-primary" >Edit</a> | <a href="/delete_question/{{question.id}}/{{name}}" type="button" class="btn btn-danger">delete</a></td>
                               </tr>
                               {%endfor%}
                             </tbody>
@@ -72,7 +72,7 @@
                           <h3 id="center">No questions available</h3>
                           {%endif%}
                           <div id="center">
-                            <a href="#" type="button" class="btn btn-primary">Add question</a>
+                            <a href="/add_question/{{quiz.id}}/{{name}}" type="button" class="btn btn-primary">Add question</a>
                             <a href="/edit_quiz/{{quiz.id}}/{{name}}" type="button" class="btn btn-secondary">Edit quiz</a>
                           </div>
                           <!-- table ends here -->
