--- a/templates/user_scores.html
+++ b/templates/user_scores.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>user dashboard</title>
+    <title>user score</title>
 </head>
 <body>
     <div id="container">
         <h1 id="heading">Quiz Master</h1>
         <div id="panel">
-            <h3 id="center">User Dashboard</h3>
+            <h3 id="center">User Score</h3>
             <!-- nav var started here -->
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-link active" href="/user_scores/{{ name }}">Scores</a>
+                        <a class="nav-link active" href="/user/{{name}}">quizes</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link active" href="#">Summary</a>
@@ -37,37 +37,31 @@
               </nav>
               <!-- nav bar ends here -->
                <div id="quizpanel">
-                <h2 id="center">Upcoming Quizes</h2>
-                <!-- table started here -->
-                 {%if quizs%}
-                <table class="table">
-                    <thead>
-                      <tr class="table-dark">
-                        <th scope="col">ID</th>
-                        <th scope="col">No. of questionst</th>
-                        <th scope="col">Date</th>
-                        <th scope="col">Duration</th>
-                        <th scope="col">Action</th>
-                      </tr>
+                <h2 id="center">your scores</h2>
+                {% if scores %}
+                <table class="table table-bordered table-striped">
+                    <thead class="table-dark">
+                        <tr>
+                            <th>Quiz ID</th>
+                            <th>no of question</th>
+                            <th>Date Attempted</th>
+                            <th>Score</th>
+                        </tr>
                     </thead>
                     <tbody>
-                      {% for quiz in quizs %}
-                      {% if quiz.questions | length > 0 %}
-                      <tr>
-                        <th scope="row">{{quiz.id}}</th>
-                        <td>{{quiz.questions | length}}</td>
-                        <td>{{quiz.date_of_quiz}}</td>
-                        <td>{{quiz.time_duration}}</td>
-                        <td><a href="/view_quiz/{{quiz.id}}/{{name}}" type="button" class="btn btn-primary" >View</a> | <a href="/quiz_exam/{{quiz.id}}/{{name}}" type="button" class="btn btn-success">Start</a></td>
-                      </tr>
-                      {% endif %}
-                      {% endfor %}
+                        {% for score in scores %}
+                        <tr>
+                            <td>{{ score.quiz_id }}</td>
+                            <td>{{num_questions[score.quiz_id]}}</td>
+                            <td>{{score.time_stamp.split(' ')[0]  }}</td>
+                            <td>{{ score.total_scored }}</td>
+                        </tr>
+                        {% endfor %}
                     </tbody>
-                  </table>
-                  {% else %}
-                  <div id="centre">No Quizes avilable</div>
-                  {% endif %}
-                  <!-- table ends here -->
+                </table>
+                {% else %}
+                <div class="alert alert-info text-center">No scores available.</div>
+                {% endif %}
                </div>
         </div>
     </div>
