--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,60 +1,97 @@
-
 *{
-    margin: 0px;
+    margin: 0px
 }
 
+/* ############################################################                login page                            ######################################## */
 
-#panel{
-    border: 2px solid black;
-}
-
-#panel{
-    width: 80%;
-    min-height: 580px;
+#login-container{
+    height: 515px;
+    width: 390px;
     margin: auto;
-    background-image: url('/static/images/book_bg.jpg');
-    background-size: cover;
-    background-color: rgba(255, 255, 255, 0.647);
-    background-blend-mode: overlay;
+    margin-top: 20px;
+    
     
 }
 
-#input_form{
-    border: 1px solid rgb(13, 13, 18);
-    margin: auto;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    min-height: 500px;
-    width: 500px;
-    padding: 10px;
+#login-panel{
+    margin-left: 8px;
+    margin-right: 8px;
     border-radius: 10px;
-    background-color: rgba(23, 111, 67, 0.342);
-    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.675);
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.215);
+    height: 465px;
+    padding: 20px;
+    border: 1px solid rgba(0, 0, 0, 0.26);
+
+
 }
 
-#center{
+#link {
+    display: block;
     text-align: center;
-    color: rgb(45, 45, 45);
+    margin-top: 10px;
+}
+
+/* ############################################################                signup page                            ######################################## */
+
+#signup-container{
+    margin: auto;
+    width: 430px;
+    height: 600px;
+    margin-top: 20px;
+    
+    
+    
+    
+}
+
+#signup-panel{
+    margin-left: 8px;
+    margin-right: 8px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.215);
+    height: 610px;
+    padding: 20px;
+    border: 1px solid rgba(0, 0, 0, 0.26);
+
+}
+
+/* ############################################################                admin dashboard                           ######################################## */
+
+
+
+#container{
+    border: 2px solid black;
+    margin: auto;
+    min-height: 700px;
+    width: 95%;
 }
 
 #heading{
     text-align: center;
-    color: rgb(0, 0, 255);
-}
-
-#shadow{
-    background-color: rgba(23, 111, 67, 0.342);
-    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.675);
-}
-
-
-#quizpanel{
-    border: 1px solid black;
-    min-height: 400px;
-    width: 600px;
-    margin: auto;
+    font-size: 2rem;
     margin-top: 20px;
-    margin-bottom: 20px;
-    background-color: rgba(23, 111, 67, 0.342);
-    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.675);
+    color: #007bff;
 }
+
+
+.navbar {
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    padding: 10px 20px;
+}
+
+.card {
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s ease-in-out;
+    border-radius: 10px;
+}
+.card:hover {
+    transform: scale(1.02);
+}
+
+.table {
+    margin-top: 10px;
+}
+.table-dark th {
+    text-align: center;
+}
+
