--- a/templates/login.html
+++ b/templates/login.html
@@ -3,33 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>login</title>
+    <title>Login</title>
 </head>
 <body>
-    <div id="container">
-        <h1 id="heading">Quiz Master</h1>
-        <div id="panel">
-            <h3 id="center">Login here</h3>
-            <div id="input_form">
-                <form action="/login" method="POST">
-                    <div class="mb-3">
-                      <label for="email" class="form-label">Email address</label>
-                      <input type="email" class="form-control" id="email" name="email" placeholder="iitm@ds.study.iitm.ac.in">
-                    </div>
-                    <div class="mb-3">
-                      <label for="pwd" class="form-label">Password</label>
-                      <input type="password" class="form-control" id="pwd" name="pwd" placeholder="set a strong password">
-                    </div>
-                    <div class="mb-3">
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                        New user?<a href="/signup">signup here</a>
-                        <div style="color: red;">{{msg}}</div>
-                    </div>
-                  </form>
-            </div>
+
+    <!-- container starts here -->
+    <div id="login-container">
+        <h2 class="text-center text-primary">Quiz Master</h2>
+        <!-- panel starts here -->
+        <div id="login-panel">
+            <h3 class="text-center">Login Here</h3>
+            
+            <form action="/login" method="POST">
+                <div class="mb-3">
+                    <label for="email"  class="form-label" ><b>Email Address</b></label>
+                    <input type="email" class="form-control" id="email" name="email" placeholder="iitm@ds.study.iitm.ac.in" required>
+                </div>
+                <div class="mb-3">
+                    <label for="pwd"  class="form-label" ><b>Password</b></label>
+                    <input type="password" class="form-control" id="pwd" name="pwd" placeholder="Enter your password" required>
+                </div>
+                <button type="submit" class="btn btn-primary" style="width: 100%;">Login</button>
+                <p id="link">
+                    New user? <a href="/signup">Sign up here</a>
+                </p>
+                <div class=" text-center" style="color:  red;">
+                    {{ msg }}
+                </div>
+            </form>
         </div>
+        <!-- panel starts here -->
     </div>
+    <!-- container starts here -->
 </body>
 </html>
