--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,45 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>signup</title>
+    <title>Signup</title>
 </head>
 <body>
-    <div id="container">
-        <h1 id="heading">Quiz Master</h1>
-        <div id="panel">
-            <h3 id="center">Register here</h3>
-            <div id="input_form">
-                <form action="/signup" method="POST">
-                    <div class="mb-3">
-                      <label for="email" class="form-label">Email address</label>
-                      <input type="email" class="form-control" id="email" name="email" placeholder="iitm@ds.study.iitm.ac.in">
-                    </div>
-                    <div class="mb-3">
-                      <label for="pwd" class="form-label">Password</label>
-                      <input type="password" class="form-control" id="pwd" name="pwd" placeholder="set a strong password">
-                    </div>
-                    <div class="mb-3">
-                      <label for="fullname" class="form-label">Full name</label>
-                      <input type="text" class="form-control" id="fullname" name="fullname">
-                    </div>
-                    <div class="mb-3">
-                      <label for="quali" class="form-label">Qualification</label>
-                      <input type="text" class="form-control" id="quali" name="qual">
-                    </div>
-                    <div class="mb-3">
-                      <label for="dob" class="form-label">DOB</label>
-                      <input type="date" class="form-control" id="dob" name="dob">
-                    </div>
-                    <div class="mb-3">
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                        Already have an account?<a href="/login">Login here</a>
-                        <div style="color: red;">{{msg}}</div>
-                    </div>
-                  </form>
-            </div>
+    <!-- container starts here -->
+    <div id="signup-container">
+        <h2 class="text-center text-primary">Quiz Master</h2>
+        <!-- panel starts here -->
+        <div id="signup-panel">
+            <h3 class="text-center">Register Here</h3>
+
+            <form action="/signup" method="POST">
+                <div class="mb-3">
+                    <label for="email" class="form-label"><b>Email Address</b></label>
+                    <input type="email" class="form-control" id="email" name="email" placeholder="iitm@ds.study.iitm.ac.in" required>
+                </div>
+                <div class="mb-3">
+                    <label for="pwd" class="form-label"><b>Password</b></label>
+                    <input type="password" class="form-control" id="pwd" name="pwd" placeholder="Set a strong password" required>
+                </div>
+                <div class="mb-3">
+                    <label for="fullname" class="form-label"><b>Full Name</b></label>
+                    <input type="text" class="form-control" id="fullname" name="fullname" required>
+                </div>
+                <div class="mb-3">
+                    <label for="quali" class="form-label"><b>Qualification</b></label>
+                    <input type="text" class="form-control" id="quali" name="qual">
+                </div>
+                <div class="mb-3">
+                    <label for="dob" class="form-label"><b>Date of Birth</b></label>
+                    <input type="date" class="form-control" id="dob" name="dob">
+                </div>
+                
+                <button type="submit" class="btn btn-primary" style="width: 100%;">Sign Up</button>
+
+                <p id="link">
+                    Already have an account? <a href="/login">Login here</a>
+                </p>
+                <div class="text-center" style="color: red;">
+                    {{ msg }}
+                </div>
+                
+            </form>
         </div>
+        <!-- panel starts here -->
     </div>
+        <!-- container starts here -->
 </body>
 </html>
