--- a/templates/user_scores.html
+++ b/templates/user_scores.html
@@ -3,47 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>user score</title>
+    <title>user scores</title>
 </head>
 <body>
     <div id="container">
         <h1 id="heading">Quiz Master</h1>
-        <div id="panel">
-            <h3 id="center">User Score</h3>
-            <!-- nav var started here -->
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
-                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                        <a class="nav-link active" href="/user/{{name}}">quizes</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" href="#">Summary</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" href="/login">Logout</a>
-                      </li>
+        <!-- nav bar started here -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-white" style="box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+            padding: 10px 20px;">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"><b>User Dashboard</b></a>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav me-auto">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="/user/{{name}}">Quizzes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">Summary</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-danger" href="/login">Logout</a>
+                        </li>
                     </ul>
-                    <form class="d-flex">
-                      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                      <button class="btn btn-outline-success" type="submit">Search</button>
+                    <form class="d-flex" method="POST" action="/search/{{name}}">
+                        <input class="form-control me-2" type="search" placeholder="Search" name="search_txt" id="search_txt">
+                        <button class="btn btn-outline-primary" type="submit">Search</button>
                     </form>
-                  </div>
-                  <span class="ms-3">Welcome {{name}}</span>
                 </div>
-              </nav>
-              <!-- nav bar ends here -->
-               <div id="quizpanel">
-                <h2 id="center">your scores</h2>
-                {% if scores %}
-                <table class="table table-bordered table-striped">
+                <span class="ms-3">Welcome, <strong>{{name}}</strong></span>
+            </div>
+        </nav>
+
+        <!-- nav bar ended here -->
+         <!-- user panel starts here -->
+        <div id="user_score-panel" style="margin: auto; margin-top: 30px;width: 1000px;height: auto;">
+            <h4 class="text-center text-primary">User Score</h4>
+            {% if scores %}
+            <div class="table-responsive">
+                <table class="table table-bordered table-striped text-center">
                     <thead class="table-dark">
                         <tr>
                             <th>Quiz ID</th>
-                            <th>no of question</th>
+                            <th>Questions</th>
                             <th>Date Attempted</th>
                             <th>Score</th>
                         </tr>
@@ -52,18 +55,19 @@
                         {% for score in scores %}
                         <tr>
                             <td>{{ score.quiz_id }}</td>
-                            <td>{{num_questions[score.quiz_id]}}</td>
-                            <td>{{score.time_stamp.split(' ')[0]  }}</td>
-                            <td>{{ score.total_scored }}</td>
+                            <td>{{ num_questions[score.quiz_id] }}</td>
+                            <td>{{ score.time_stamp.split(' ')[0] }}</td>
+                            <td class="text-success fw-bold">{{ score.total_scored }}</td>
                         </tr>
                         {% endfor %}
                     </tbody>
                 </table>
-                {% else %}
-                <div class="alert alert-info text-center">No scores available.</div>
-                {% endif %}
-               </div>
+            </div>
+            {% else %}
+            <div class="alert alert-info text-center">No scores available.</div>
+            {% endif %}
         </div>
+        <!-- user panel ends here -->
     </div>
 </body>
 </html>
